--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@ us</a> to join the mailing list.</p>
 <h1><strong>Announcements</strong></h1>
 <div id="next-coordination-meeting" class="section level2">
 <h2>Next Coordination Meeting</h2>
-<p><strong>9 September 2023 - 1000-1200 NBO time</strong></p>
+<p><strong>30 November 2023 - 1000-1200 NBO time</strong></p>
 <p><br></p>
 </div>
 <div id="new-releases" class="section level2">
@@ -1552,25 +1552,104 @@ August data reported on August 28 2022.</p>
 <div id="w-reports" class="section level1">
 <h1><strong>5W Reports</strong></h1>
 <p><br></p>
+<div id="october-2023-5ws-report" class="section level3">
+<h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_oct2023.html">October
+2023 5Ws report</a></strong></h3>
+<p><br></p>
+</div>
+<div id="september-2023-5ws-report" class="section level3">
+<h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_sep2023.html">September
+2023 5Ws report</a></strong></h3>
+<p><br></p>
+</div>
 <div id="ws-report-august-2023" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/">5Ws
 Report August 2023</a></strong></h3>
 <p>28 August 2023. Monthly report on August data reported on August 28
 2022.</p>
-<p><br><br><br></p>
+<p><br></p>
 </div>
 <div id="ws-report-july-2023" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_jul2023.html">5Ws
 Report July 2023</a></strong></h3>
 <p>28 July 2023. Monthly report on July data reported on July 28
 2022.</p>
-<p><br><br><br></p>
+<p><br></p>
 </div>
 <div id="ws-report-june-2023" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_jun2023.html">5Ws
 Report June 2023</a></strong></h3>
 <p>28 June 2023. Monthly report on June data reported on June 28
 2022.</p>
+<p><br><br><br></p>
+</div>
+</div>
+<div id="key-datasets" class="section level1">
+<h1>Key Datasets</h1>
+<p><br></p>
+<div id="geospatial-datasets" class="section level2">
+<h2>Geospatial datasets</h2>
+<p><br></p>
+<div id="locations-and-pcodes" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/raw/main/data/ken_adminboundaries_tabulardata_v2.xlsx">Locations
+and Pcodes</a></strong></h3>
+<p>Counties and constituencies and corresponding Pcodes from the
+National Gazette.</p>
+</div>
+<div id="shapefiles" class="section level3">
+<h3><strong><a href="https://data.humdata.org/m/dataset/cod-ab-ken?">Shapefiles</a></strong></h3>
+<p>Kenyan Subnational boundaries, from OCHA.</p>
+</div>
+<div id="all-towns-shapefile-data" class="section level3">
+<h3><strong><a href="https://geodata.arin-africa.org/layers/my_geonode_data:geonode:kenya_all_towns">All
+towns Shapefile data</a></strong></h3>
+<p>From the Africa Research and Impact Network. Select “Original
+Dataset” when downloading layer.</p>
+<p><br><br><br></p>
+</div>
+</div>
+<div id="ws-and-results-reporting" class="section level2">
+<h2>5Ws and results reporting</h2>
+<div id="ws-csv" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/blob/main/data/eie_5ws.csv">5Ws
+CSV</a></strong></h3>
+<p><a href="https://raw.githubusercontent.com/kenya-eie-wg/eie_wg_5ws/main/data/eie_5ws.csv">Raw
+version</a></p>
+<p><br></p>
+</div>
+<div id="ws-template" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/raw/main/data/eie_5ws_template_v3_20230828.xlsx">5Ws
+Template</a></strong></h3>
+<p><br></p>
+</div>
+<div id="unicef-sitrep-deprecated" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/blob/main/data/old_table_eie_match.csv">UNICEF
+sitrep (deprecated)</a></strong></h3>
+<p>UNICEF reporting template for internal sitrep deprecated. Template
+has been merged with the 5Ws template. This file contains the breakdowns
+of these activities, in a format that can be matched with the 5Ws. These
+will be useful if disaggregations are required for activities reported
+under the old template before October 2023.</p>
+<p><br></p>
+</div>
+</div>
+<div id="county-level-education-indicators-table-version" class="section level2">
+<h2><strong><a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/blob/main/data/counties_spreadsheet.csv">County-level
+Education Indicators – Table version</a></strong></h2>
+<p><a href="https://raw.githubusercontent.com/kenya-eie-wg/kenya_education_county_profiles/main/data/counties_spreadsheet.csv">Table
+version raw</a></p>
+<p><br></p>
+</div>
+<div id="county-level-education-indicators" class="section level2">
+<h2><strong><a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard/blob/main/data/counties.csv">County-level
+Education Indicators</a></strong></h2>
+<p><a href="https://raw.githubusercontent.com/kenya-eie-wg/kenya_county_profiles_dashboard/main/data/counties.csv">Raw
+version</a></p>
+<p><br></p>
+</div>
+<div id="integrated-food-security-phase-classification-data" class="section level2">
+<h2><strong><a href="https://www.ipcinfo.org/ipc-country-analysis/details-map/en/c/1156541/?iso3=KEN">Integrated
+Food Security Phase Classification data</a></strong></h2>
 <p><br><br><br></p>
 </div>
 </div>
