--- a/index.html
+++ b/index.html
@@ -1555,11 +1555,13 @@ August data reported on August 28 2022.</p>
 <div id="october-2023-5ws-report" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_oct2023.html">October
 2023 5Ws report</a></strong></h3>
+<p>31 October 2023.</p>
 <p><br></p>
 </div>
 <div id="september-2023-5ws-report" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_sep2023.html">September
 2023 5Ws report</a></strong></h3>
+<p>29 September 2023.</p>
 <p><br></p>
 </div>
 <div id="ws-report-august-2023" class="section level3">
