--- a/index.html
+++ b/index.html
@@ -1587,20 +1587,22 @@ Report June 2023</a></strong></h3>
 </div>
 </div>
 <div id="key-datasets" class="section level1">
-<h1>Key Datasets</h1>
+<h1><strong>Key Datasets</strong></h1>
 <p><br></p>
 <div id="geospatial-datasets" class="section level2">
-<h2>Geospatial datasets</h2>
+<h2><strong>Geospatial datasets</strong></h2>
 <p><br></p>
 <div id="locations-and-pcodes" class="section level3">
 <h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/raw/main/data/ken_adminboundaries_tabulardata_v2.xlsx">Locations
 and Pcodes</a></strong></h3>
 <p>Counties and constituencies and corresponding Pcodes from the
 National Gazette.</p>
+<p><br></p>
 </div>
 <div id="shapefiles" class="section level3">
 <h3><strong><a href="https://data.humdata.org/m/dataset/cod-ab-ken?">Shapefiles</a></strong></h3>
 <p>Kenyan Subnational boundaries, from OCHA.</p>
+<p><br></p>
 </div>
 <div id="all-towns-shapefile-data" class="section level3">
 <h3><strong><a href="https://geodata.arin-africa.org/layers/my_geonode_data:geonode:kenya_all_towns">All
@@ -1611,7 +1613,8 @@ Dataset” when downloading layer.</p>
 </div>
 </div>
 <div id="ws-and-results-reporting" class="section level2">
-<h2>5Ws and results reporting</h2>
+<h2><strong>5Ws and results reporting</strong></h2>
+<p><br></p>
 <div id="ws-csv" class="section level3">
 <h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/blob/main/data/eie_5ws.csv">5Ws
 CSV</a></strong></h3>
