--- a/index.html
+++ b/index.html
@@ -1661,6 +1661,7 @@ Food Security Phase Classification data</a></strong></h2>
 <div id="county-dashboards" class="section level1">
 <h1><strong><a href="https://seanywng.shinyapps.io/kenya_county_profiles_dashboard/">County
 Dashboards</a></strong></h1>
+<p>As commissioned by UNICEF.</p>
 <p><br></p>
 </div>
 
