--- a/index.html
+++ b/index.html
@@ -1543,9 +1543,9 @@ us</a> to join the mailing list.</p>
 </div>
 <div id="new-releases" class="section level2">
 <h2>New releases</h2>
-<p><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/">* 5Ws
-Report August 2023</a>.</strong> 28 August 2023. Monthly report on
-August data reported on August 28 2022.</p>
+<p><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/">5Ws
+Report October 2023</a>.</strong> Monthly report, data reported on 31
+October 2023.</p>
 <p><br><br><br></p>
 </div>
 </div>
@@ -1655,14 +1655,14 @@ version</a></p>
 <div id="integrated-food-security-phase-classification-data" class="section level2">
 <h2><strong><a href="https://www.ipcinfo.org/ipc-country-analysis/details-map/en/c/1156541/?iso3=KEN">Integrated
 Food Security Phase Classification data</a></strong></h2>
-<p><br><br><br></p>
+<p><br><br></p>
 </div>
-</div>
-<div id="county-dashboards" class="section level1">
-<h1><strong><a href="https://seanywng.shinyapps.io/kenya_county_profiles_dashboard/">County
-Dashboards</a></strong></h1>
+<div id="county-dashboards" class="section level2">
+<h2><strong><a href="https://seanywng.shinyapps.io/kenya_county_profiles_dashboard/">County
+Dashboards</a></strong></h2>
 <p>As commissioned by UNICEF.</p>
 <p><br></p>
+</div>
 </div>
 
 
