new links added

--- a/index.html
+++ b/index.html
@@ -1543,15 +1543,20 @@ us</a> to join the mailing list.</p>
 </div>
 <div id="new-releases" class="section level2">
 <h2>New releases</h2>
+<p><br></p>
+<p><strong><a href="https://kenya-eie-wg.github.io/kenya_floods/">2023
+Flood Resources</a></strong> Includes maps and OCHA live dataset.</p>
 <p><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/">5Ws
 Report October 2023</a>.</strong> Monthly report, data reported on 31
 October 2023.</p>
 <p><br><br><br></p>
 </div>
 </div>
-<div id="w-reports" class="section level1">
-<h1><strong>5W Reports</strong></h1>
+<div id="reports" class="section level1">
+<h1><strong>Reports</strong></h1>
 <p><br></p>
+<div id="ws" class="section level2">
+<h2>5Ws</h2>
 <div id="october-2023-5ws-report" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_oct2023.html">October
 2023 5Ws report</a></strong></h3>
@@ -1584,6 +1589,16 @@ Report June 2023</a></strong></h3>
 <p>28 June 2023. Monthly report on June data reported on June 28
 2022.</p>
 <p><br><br><br></p>
+</div>
+</div>
+<div id="kenya-certificate-of-secondary-education-kcse-analysis" class="section level2">
+<h2>Kenya Certificate of Secondary Education (KCSE) Analysis</h2>
+<div id="exploratory-data-analysis-of-kcse-results-in-dadaab-kakuma-and-kalobeyei" class="section level3">
+<h3><strong><a href="https://kenya-eie-wg.github.io/kcse_results_public/report">Exploratory
+Data Analysis of KCSE Results in Dadaab, Kakuma and
+Kalobeyei</a></strong></h3>
+<p><br><br><br></p>
+</div>
 </div>
 </div>
 <div id="key-datasets" class="section level1">
@@ -1638,17 +1653,27 @@ under the old template before October 2023.</p>
 <p><br></p>
 </div>
 </div>
-<div id="county-level-education-indicators-table-version" class="section level2">
-<h2><strong><a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/blob/main/data/counties_spreadsheet.csv">County-level
-Education Indicators – Table version</a></strong></h2>
+<div id="county-level-indicators" class="section level2">
+<h2><strong>County-level Indicators</strong></h2>
+<div id="county-level-education-indicators-table-version" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/blob/main/data/counties_spreadsheet.csv">County-level
+Education Indicators – Table version</a></strong></h3>
 <p><a href="https://raw.githubusercontent.com/kenya-eie-wg/kenya_education_county_profiles/main/data/counties_spreadsheet.csv">Table
 version raw</a></p>
 <p><br></p>
 </div>
-<div id="county-level-education-indicators" class="section level2">
-<h2><strong><a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard/blob/main/data/counties.csv">County-level
-Education Indicators</a></strong></h2>
+<div id="county-level-education-indicators" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard/blob/main/data/counties.csv">County-level
+Education Indicators</a></strong></h3>
 <p><a href="https://raw.githubusercontent.com/kenya-eie-wg/kenya_county_profiles_dashboard/main/data/counties.csv">Raw
+version</a></p>
+<p><br></p>
+</div>
+</div>
+<div id="kcse-dadaab-kakuma-and-kalobeyei-raw-data-anonymised" class="section level2">
+<h2><strong><a href="https://github.com/kenya-eie-wg/kcse_results_public/blob/main/data/kcse.csv">KCSE
+Dadaab, Kakuma and Kalobeyei raw data Anonymised</a></strong></h2>
+<p><a href="https://raw.githubusercontent.com/kenya-eie-wg/kcse_results_public/main/data/kcse.csv">Raw
 version</a></p>
 <p><br></p>
 </div>
@@ -1657,10 +1682,21 @@ version</a></p>
 Food Security Phase Classification data</a></strong></h2>
 <p><br><br></p>
 </div>
+</div>
+<div id="project-references" class="section level1">
+<h1><strong>Project References</strong></h1>
+<p><br></p>
+<div id="operation-come-to-school" class="section level2">
+<h2><strong><a href="https://kenya-eie-wg.github.io/operation_come_to_school_public/">Operation
+Come to School</a></strong></h2>
+<p><br></p>
+</div>
 <div id="county-dashboards" class="section level2">
-<h2><strong><a href="https://seanywng.shinyapps.io/kenya_county_profiles_dashboard/">County
+<h2><strong><a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/pdf">County
 Dashboards</a></strong></h2>
-<p>As commissioned by UNICEF.</p>
+<p>Online folder of PDFs <a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/img">PNG
+versions</a> <a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard">Code
+for online dashboard</a></p>
 <p><br></p>
 </div>
 </div>
