index and links updated

--- a/index.html
+++ b/index.html
@@ -1616,14 +1616,30 @@ National Gazette.</p>
 </div>
 <div id="shapefiles" class="section level3">
 <h3><strong><a href="https://data.humdata.org/m/dataset/cod-ab-ken?">Shapefiles</a></strong></h3>
-<p>Kenyan Subnational boundaries, from OCHA.</p>
+<p>Kenyan Subnational boundaries, from OCHA. Admin 1 are counties. Admin
+2 are constituencies.</p>
+<p><a href="https://geodata.arin-africa.org/layers/geonode:ke_subcounty">Alternate
+shapefiles with sub-county borders</a>. Verification and matching
+needed.</p>
 <p><br></p>
 </div>
 <div id="all-towns-shapefile-data" class="section level3">
 <h3><strong><a href="https://geodata.arin-africa.org/layers/my_geonode_data:geonode:kenya_all_towns">All
 towns Shapefile data</a></strong></h3>
 <p>From the Africa Research and Impact Network. Select “Original
-Dataset” when downloading layer.</p>
+Dataset” when downloading layer. Towns, cities, trading hubs and
+markets.</p>
+<p><br></p>
+</div>
+<div id="kenya-rivers-shapefile" class="section level3">
+<h3><strong><a href="http://geoportal.rcmrd.org/layers/servir%3Akenya_major_rivers">Kenya
+Rivers shapefile</a></strong></h3>
+<p><br></p>
+</div>
+<div id="rkenyacenus" class="section level3">
+<h3><strong><a href="https://github.com/Shelmith-Kariuki/rKenyaCensus">RKenyaCenus</a></strong></h3>
+<p>R package containing the 2019 Kenya Population and Housing Census
+results. Developer <a href="https://shelkariuki.netlify.app/post/rkenyacensus/">website</a>.</p>
 <p><br><br><br></p>
 </div>
 </div>
@@ -1642,9 +1658,9 @@ version</a></p>
 Template</a></strong></h3>
 <p><br></p>
 </div>
-<div id="unicef-sitrep-deprecated" class="section level3">
+<div id="unicef-sitrep-reportingdeprecated" class="section level3">
 <h3><strong><a href="https://github.com/kenya-eie-wg/eie_wg_5ws/blob/main/data/old_table_eie_match.csv">UNICEF
-sitrep (deprecated)</a></strong></h3>
+sitrep reporting(deprecated)</a></strong></h3>
 <p>UNICEF reporting template for internal sitrep deprecated. Template
 has been merged with the 5Ws template. This file contains the breakdowns
 of these activities, in a format that can be matched with the 5Ws. These
@@ -1686,6 +1702,12 @@ Food Security Phase Classification data</a></strong></h2>
 <div id="project-references" class="section level1">
 <h1><strong>Project References</strong></h1>
 <p><br></p>
+<div id="flood-resources" class="section level2">
+<h2><strong><a href="https://kenya-eie-wg.github.io/kenya_floods/">2023
+Flood Resources</a></strong></h2>
+<p>Includes maps and OCHA live dataset.</p>
+<p><br></p>
+</div>
 <div id="operation-come-to-school" class="section level2">
 <h2><strong><a href="https://kenya-eie-wg.github.io/operation_come_to_school_public/">Operation
 Come to School</a></strong></h2>
@@ -1697,6 +1719,14 @@ Dashboards</a></strong></h2>
 <p>Online folder of PDFs <a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/img">PNG
 versions</a> <a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard">Code
 for online dashboard</a></p>
+<p><br><br><br></p>
+</div>
+</div>
+<div id="links" class="section level1">
+<h1><strong>Links</strong></h1>
+<div id="kenya-eie-wg-github-repositories" class="section level3">
+<h3><strong><a href="https://github.com/orgs/kenya-eie-wg/repositories">Kenya EiE WG
+Github repositories</a></strong></h3>
 <p><br></p>
 </div>
 </div>
