updated with november report

--- a/index.html
+++ b/index.html
@@ -1547,8 +1547,8 @@ us</a> to join the mailing list.</p>
 <p><strong><a href="https://kenya-eie-wg.github.io/kenya_floods/">2023
 Flood Resources</a></strong> Includes maps and OCHA live dataset.</p>
 <p><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/">5Ws
-Report October 2023</a>.</strong> Monthly report, data reported on 31
-October 2023.</p>
+Report November 2023</a>.</strong> Monthly report, data reported on 30
+November 2023.</p>
 <p><br><br><br></p>
 </div>
 </div>
@@ -1557,6 +1557,12 @@ October 2023.</p>
 <p><br></p>
 <div id="ws" class="section level2">
 <h2>5Ws</h2>
+<div id="november-2023-5ws-report" class="section level3">
+<h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_nov2023.html">November
+2023 5Ws report</a></strong></h3>
+<p>31 October 2023.</p>
+<p><br></p>
+</div>
 <div id="october-2023-5ws-report" class="section level3">
 <h3><strong><a href="https://kenya-eie-wg.github.io/eie_wg_5ws/reporting_oct2023.html">October
 2023 5Ws report</a></strong></h3>
@@ -1716,8 +1722,8 @@ Come to School</a></strong></h2>
 <div id="county-dashboards" class="section level2">
 <h2><strong><a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/pdf">County
 Dashboards</a></strong></h2>
-<p>Online folder of PDFs <a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/img">PNG
-versions</a> <a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard">Code
+<p>Online folder of PDFs. <a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/img">PNG
+versions</a>. <a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard">Code
 for online dashboard</a></p>
 <p><br><br><br></p>
 </div>
