--- a/index.html
+++ b/index.html
@@ -1618,6 +1618,8 @@ Kalobeyei</a></strong></h3>
 and Pcodes</a></strong></h3>
 <p>Counties and constituencies and corresponding Pcodes from the
 National Gazette.</p>
+<p>Notes about the locations data <a href="https://kenya-eie-wg.github.io/kenya_locations/">here</a>,
+including on matching between sub-counties and constituencies.</p>
 <p><br></p>
 </div>
 <div id="shapefiles" class="section level3">
@@ -1675,8 +1677,21 @@ under the old template before October 2023.</p>
 <p><br></p>
 </div>
 </div>
-<div id="county-level-indicators" class="section level2">
-<h2><strong>County-level Indicators</strong></h2>
+<div id="other-key-datasets" class="section level2">
+<h2><strong>Other key datasets</strong></h2>
+<div id="poverty-incidence" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/kenya_locations/blob/main/data/poverty.csv">Poverty
+incidence</a></strong></h3>
+<p>County-level poverty-incidence and counts, from the 2019 census.</p>
+<p><br></p>
+</div>
+<div id="census-demographic-data" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/kenya_locations/blob/main/data/census_adm2_incomplete.csv">Census
+Demographic data</a></strong></h3>
+<p>Matching is incomplete between constituency pcodes and sub-county
+pcodes.</p>
+<p><br></p>
+</div>
 <div id="county-level-education-indicators-table-version" class="section level3">
 <h3><strong><a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/blob/main/data/counties_spreadsheet.csv">County-level
 Education Indicators – Table version</a></strong></h3>
@@ -1691,18 +1706,18 @@ Education Indicators</a></strong></h3>
 version</a></p>
 <p><br></p>
 </div>
-</div>
-<div id="kcse-dadaab-kakuma-and-kalobeyei-raw-data-anonymised" class="section level2">
-<h2><strong><a href="https://github.com/kenya-eie-wg/kcse_results_public/blob/main/data/kcse.csv">KCSE
-Dadaab, Kakuma and Kalobeyei raw data Anonymised</a></strong></h2>
+<div id="kcse-dadaab-kakuma-and-kalobeyei-raw-data-anonymised" class="section level3">
+<h3><strong><a href="https://github.com/kenya-eie-wg/kcse_results_public/blob/main/data/kcse.csv">KCSE
+Dadaab, Kakuma and Kalobeyei raw data Anonymised</a></strong></h3>
 <p><a href="https://raw.githubusercontent.com/kenya-eie-wg/kcse_results_public/main/data/kcse.csv">Raw
 version</a></p>
 <p><br></p>
 </div>
-<div id="integrated-food-security-phase-classification-data" class="section level2">
-<h2><strong><a href="https://www.ipcinfo.org/ipc-country-analysis/details-map/en/c/1156541/?iso3=KEN">Integrated
-Food Security Phase Classification data</a></strong></h2>
+<div id="integrated-food-security-phase-classification-data" class="section level3">
+<h3><strong><a href="https://www.ipcinfo.org/ipc-country-analysis/details-map/en/c/1156541/?iso3=KEN">Integrated
+Food Security Phase Classification data</a></strong></h3>
 <p><br><br></p>
+</div>
 </div>
 </div>
 <div id="project-references" class="section level1">
@@ -1725,6 +1740,13 @@ Dashboards</a></strong></h2>
 <p>Online folder of PDFs. <a href="https://github.com/kenya-eie-wg/kenya_education_county_profiles/tree/main/img">PNG
 versions</a>. <a href="https://github.com/kenya-eie-wg/kenya_county_profiles_dashboard">Code
 for online dashboard</a></p>
+<p><br></p>
+</div>
+<div id="eie-wg-mailing-list" class="section level2">
+<h2><strong><a href="https://github.com/kenya-eie-wg/operation_come_to_school/blob/main/data/eie_wg_contact_list.csv">EiE
+WG Mailing list</a></strong></h2>
+<p>Private file, only available to the owners of the Kenya EiE WG github
+organisation. Request access from the Coordinator.</p>
 <p><br><br><br></p>
 </div>
 </div>
